--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -1,3 +1,3 @@
-<div class="tx-threesixtyslider clearfix">
+<div class="tx-threesixtyslider clearfix section-block">
 	<f:render section="main" />
 </div>
