[TASK] padding fixed

--- a/Resources/Private/Templates/Slideritem/Show.html
+++ b/Resources/Private/Templates/Slideritem/Show.html
@@ -14,7 +14,7 @@ Otherwise your changes will be overwritten the next time you save the extension 
 <f:section name="main">
     <f:flashMessages />
 
-    <div id="container" class="container-fluid" >
+    <div id="container" class="container-fluid pb-lg-5 pb-md-4 pb-3">
         <div class="sixty-wrapper clearfix">
             <div class="buttons sixty-btn-group">
                <f:comment>
@@ -32,7 +32,7 @@ Otherwise your changes will be overwritten the next time you save the extension 
             </div>
         </div>
     </div>
-    <div class="section-block light-beige-section">
+    <div class="py-lg-5 py-md-4 py-3 light-beige-section">
         <div class="container-fluid" >
             <div class="row">
                 <div class="col-md-6">
